fix(aliyun): preserve trace consumer status (#2239)
* fix(aliyun): preserve trace consumer status

Signed-off-by: yuluo-yx <yuluo08290126@gmail.com>

* fix(aliyun): tolerate null collection rows

Signed-off-by: yuluo-yx <yuluo08290126@gmail.com>

---------

Signed-off-by: yuluo-yx <yuluo08290126@gmail.com>